Use List.of() where possible, emulate listOf() in RequestManagers, and clean up timeout determination logic in ConsumerNetworkThread